app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */


body{
   font-family: Roboto,Arial,Helvetica,sans-serif;
   color: #04567E;
   line-height:1.5;
   margin:0;
   background-image:url('background.jpg');
}

p{
  margin:1em;
  font-size:1em;
}

.container{
  padding:1em;
  margin-top:2em;
}

.error_explanation{
  width:60%;
  padding-top: 5em;
  float:center;
  border-style:solid;
  background-color:pink;
}

.box{
  float:middle;
  text-align: center;
  padding:1em;
  margin:2em;
}

.navbar{
  list-style-type: none;
  font-size:1.5em;
  margin:0;
  padding: 0;
  overflow:hidden;
  position:fixed;
  top:0;
  width:100%;
  background-color: #F0F0F0;
  /*box-shadow: 0 8px 6px -6px #999;*/
  box-shadow: 0 0.4em 0.3em -0.3em #909090;
}

li{
  float:right;
}

li a{
  display:block;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

li a:hover{
  color:blue;
}

.logout{
  background-color: #A0A0A0;
}

h1
{
  margin-top:6%;
  margin-left:2%;
}

.field
{
  width: 60%;
  height: 5%;
}

.submit
{
  width: 20%;
}

